# episodic-rs

./: Caddyfile.dev  Cargo.toml  Dockerfile.dev  Dockerfile.prod  Makefile  docker-compose.yml
api/: Cargo.toml  Dockerfile.dev
api/migrations/2019-12-14-045005_create_users/: down.sql  up.sql
api/migrations/2019-12-23-192105_add_expiry_to_login_tokens/: down.sql  up.sql
api/migrations/2020-01-27-040014_create_shows/: down.sql  up.sql
api/src/: data.rs  handlers.rs  main.rs  routes.rs  schema.rs  tmdb.rs
api/src/data/: mod.rs  shows.rs  users.rs
api/src/models/: users.rs
migrations/2019-12-14-045005_create_users/: up.sql
src/: data.rs  main.rs  routes.rs
web/: Cargo.toml  Dockerfile.dev
web/src/: api.rs  app.rs  login.rs  main.rs
