[package]
name = "episodic"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0.103"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.10"
