[package]
name = "episodic"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-rc"

diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
futures = "0.3.1"

serde = "1.0.103"
serde_json = "1.0"
serde_derive = "1.0"

chrono = "0.4.10"
rand = "0.7.2"
