[package]
name = "episodic"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2"] }
serde = "1.0.103"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
rand = "0.7.2"
# reqwest = ""